# lltm

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.Rmd  README.md
.github/workflows/: R-CMD-check.yaml
R/: RcppExports.R  lltm.R  package.R
csrc/: CMakeLists.txt
csrc/include/lltm/: lltm.h
csrc/src/: exports.cpp  lltm.cpp  lltm.def  utils.cpp
inst/def/: lltm.def
inst/include/lltm/: exports.h  lltm.h
inst/lib/: lltm.lib
src/: Makevars.win  RcppExports.cpp  code.cpp  exports.cpp  lltm.cpp  lltm_types.h  utils.cpp
src/lltm/: lltm.h
tests/: testthat.R
tests/testthat/: test-code.R  test-lltm.R
